tests/baselines/reference/importTag13.errors.txt
/foo.js(1,15): error TS1005: 'from' expected.


==== /foo.js (1 errors) ====
    /** @import x = require("types") */
                  ~
!!! error TS1005: 'from' expected.
    
==== /types.ts (0 errors) ====
    export interface Foo {
        a: number;
    }
    